--- a/css/style.scss
+++ b/css/style.scss
@@ -1,3 +1,4 @@
+$primary:       #fc5917 !default;
 @import "../node_modules/bootstrap/scss/bootstrap.scss";
 
 
@@ -7,7 +8,7 @@
 }
 
 .navbar {
-    padding: 15px 100px;
+    padding: 10px 100px;
     background-color: #000;
 }
 
@@ -15,7 +16,8 @@
     color: white;
     margin: 0px 35px;
     font-size: 16px;
-    font-family: "Hind Guntur", "sans-serif";
+    font-family: "Hind Guntur", sans-serif;
+    vertical-align: middle !important;
 }
 
 .navbar-btn {
@@ -26,7 +28,7 @@
 
 .landing {
     background-image: url("../assets/images/Landing/roberto-carlos-roman-TS_g_856-CA-unsplash.jpg");
-    height: 800px;
+    height: 1020px;
     background-size: cover;
 }
 
@@ -36,13 +38,14 @@
 }
 
 .landing-text {
-    margin: 70px 0px 0px 0px;
-    padding: 300px 0px 0px 0px;
+    margin: 65px 0px 0px 0px;
+    padding: 40% 0px 0px 0px;
 }
 
 .landing-text h1 {
-    font-size: 54;
-    font-family: "Viga", "sans-serif";
+    font-size: 54px;
+    font-weight: 400;
+    font-family: "Viga", sans-serif;
 }
 
 .products-container {
@@ -52,12 +55,93 @@
 }
 
 .products-header {
-    font-family: "Hind Guntur", "sans-serif";
+    font-family: "Hind Guntur", sans-serif;
     font-size: 36pt;
-    padding: 0px 0px 0px 15px;
+    padding: 0 0 0 15px;
+    margin: 0 0 0 20px;
 }
 
-.product {
-    margin: 0px 0px 100px 0px !important;
-    width: 20px !important;
+@media (max-width(576px)) {
+    .products-header {
+        text-align: center;
+    }
+
+    .product > .product-card {
+        margin: 0 auto 100px auto;
+    }
+    
+    .products-container {
+        width: 95%;
+    }
+}
+
+.product > .product-card:hover {
+    background-color: #fc5917;
+    color: #fbece0;
+}
+
+.product-card:hover .buyNowbtn {
+    display: block;
+}
+
+.product-card:hover  .card-img-top {
+    opacity: 100%;
+}
+
+.product > .product-card {
+    border-radius: 23px;
+    background-color: #fbece0;
+    width: 253px;
+    height: 380px;
+    border: none;
+    position: relative;
+    padding: 5px;
+    color: #131314;
+    margin:0 0 100px 0;
+    transition: 0.25s ease-in-out;
+}
+
+.buyNowbtn {
+    display: none;
+    transition: 0.25s ease-in;
+    height: 28px;
+    font-size: 12px;
+    z-index: 3;
+}
+
+.product > .product-card > .card-body{
+    padding: 10px;
+}
+
+.product > .product-card > .card-body > .card-subtitle {
+    padding: 0 0 5px 0;
+    
+}
+
+.product > .product-card > .card-body > .card-title {
+    margin-bottom: 5px;
+}
+
+.product-card > .card-img-top {
+    border-radius: 20px;
+    width: 243px !important;
+    height: 243px !important;
+    opacity: 40%;
+    transition: ease-in-out 0.25s;
+}
+
+.product > .product-card > .card-text {
+    font-family: "Raleway", sans-serif;
+    font-size: 11pt;
+}
+
+.buyNowbtn {
+    position: absolute;
+    top: 0;
+    right: 0;
+    font-size: 12px;
+    font-family: "Hind Guntur", sans-serif;
+    width: 100px;
+    margin: 20px;
+    box-shadow: 0 0px 0px 0 rgba(0, 0, 0, 0.2);
 }
