--- a/css/style.css
+++ b/css/style.css
@@ -10861,7 +10861,7 @@ a.text-dark:hover, a.text-dark:focus {
   margin: 0 0 0 20px;
 }
 
-@media (max-width(576px)) {
+@media only screen and (max-width: 576px) {
   .products-header {
     text-align: center;
   }
