--- a/css/style.scss
+++ b/css/style.scss
@@ -61,7 +61,7 @@ $primary:       #fc5917 !default;
     margin: 0 0 0 20px;
 }
 
-@media (max-width(576px)) {
+@media only screen and (max-width: 576px) {
     .products-header {
         text-align: center;
     }
