--- a/css/style.css
+++ b/css/style.css
@@ -11187,4 +11187,27 @@ html {
     height: 100%;
   }
 }
+
+/*
+==============
+=== FOOTER ===
+==============
+*/
+footer {
+  background-color: #131314;
+  padding: 16px 0;
+}
+
+footer > .container-fluid > div > .col-4, footer > .container-sm > div > .col-4, footer > .container-md > div > .col-4, footer > .container-lg > div > .col-4, footer > .container-xl > div > .col-4, footer > .container-fluid > div, footer > .container-sm > div, footer > .container-md > div, footer > .container-lg > div, footer > .container-xl > div, footer > .container-fluid, footer > .container-sm, footer > .container-md, footer > .container-lg, footer > .container-xl {
+  padding: 0;
+}
+
+.footerLinks a:hover {
+  color: #86919c;
+  text-decoration: none;
+}
+
+.footerLinks a {
+  color: #fbece0 !important;
+}
 /*# sourceMappingURL=style.css.map */
